--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,16 @@
 Package: dcData
 Type: Package
 Title: Data Sets Accompanying DataComputing eBook
-Version: 0.1.0
-Author: Matthew Beckman, Daniel Kaplan
-Maintainer: Matthew Beckman <mdb268@psu.edu>
+Version: 0.0.0.9000
+Authors@R: c(
+  person("Daniel", "Kaplan", role = "aut"),
+  person("Matthew", "Beckman", email = "mdb268@psu.edu", role = c("aut", "cre")))
 Description: Data sets accompanying the *DataComputing* eBook 
     <https://dtkaplan.github.io/DataComputingEbook/> used to teach wrangling 
     and visualization techniques for turning data into information.
-License: CC BY 4.0
+License: CC0
 Encoding: UTF-8
 LazyData: true
+Depends: 
+    R (>= 2.10)
+RoxygenNote: 7.1.1
